--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 {% block body %}
 <div class="page-wrap">
 
- <header>
+ <header class="rp">
    <div class="container">
      <div class="header-inner">
 
