--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,7 @@
 {% block body %}
 <div class="page-wrap">
 
- <header>
+ <header class="rp">
    <div class="container">
      <div class="header-inner">
 
@@ -19,10 +19,10 @@
    </div>
  </header>
  <div class="container">
-   <div class="col-xs-5">
+   <div class="insert">
      <div class="panel">
        <div class="panel-heading">
-         <h3>try reading.pub</h3>
+         <h3>read new document</h3>
        </div>
 
        <div class="panel-body">
@@ -37,26 +37,16 @@
              <i class="fa fa-send"></i> Read with Pleasure
            </button>
          </form>
-         <hr />
-         <h3>or</h3>
-         <hr />
-
-
-         <p>Drag the following button to your bookmarks, clicking it
-         will trigger reading.pub parser automatically</p>
-
-         <a class="btn btn-special"
-         href="javascript:var%20win=window.open('http://reading.pub/submit?url='+encodeURIComponent(location.href),%20'_blank');%20win.focus();">
-         <i class="fa fa-book"></i> reading.pub</a>
-
        </div> <!-- panel-body -->
      </div>   <!-- panel -->
-   </div>     <!-- end of col-xs-6 -->
 
-   <div class="col-xs-5 col-xs-offset-2">
+   </div> <!-- end of insert -->
 
+   <div class="posts">
+   {% for post in posts %}
+     {% include "snippets/posts.html" %}
+   {% endfor %}
    </div>
-
  </div> <!-- end of container -->
 
 </div> <!-- end of page-wrap -->
@@ -67,5 +57,6 @@
 
 {% block jsblock %}
   {{ super() }}
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.4.0/jquery.timeago.min.js"></script>
 {% endblock %} <!-- end of jsblock -->
 {% endblock %} <!-- end of body block -->
