--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,4 +1,10 @@
-/* line 5, ../sass/custom.scss */
+/* purplish */
+/* darkish purplish */
+/* $primary-color: #252B33; */
+/* angelspeaker color */
+/* $primary-color: #EF4836; */
+/* muhammetcan.net color */
+/* line 13, ../sass/custom.scss */
 html, body {
   /* background-color: #f1f2f7; */
   /* background-color: #fafafa; */
@@ -7,32 +13,48 @@ html, body {
   height: 100%;
 }
 
-/* line 13, ../sass/custom.scss */
-header {
+/* line 21, ../sass/custom.scss */
+header.rp {
   width: 100%;
   padding-top: 100px;
   padding-bottom: 20px;
-  background-color: #ef4836;
+  background-color: #654bac;
+  border-top: 6px solid #4b3a79;
 }
-/* line 19, ../sass/custom.scss */
-header .container {
+/* line 28, ../sass/custom.scss */
+header.rp .container {
   height: 100%;
 }
-/* line 23, ../sass/custom.scss */
-header .header-inner {
+/* line 32, ../sass/custom.scss */
+header.rp .header-inner {
   height: 100%;
   padding: 15px;
 }
-/* line 29, ../sass/custom.scss */
-header h1, header h2, header h3, header h4, header h5 {
+/* line 38, ../sass/custom.scss */
+header.rp h1, header.rp h2, header.rp h3, header.rp h4, header.rp h5 {
   color: #f1f2f7;
 }
-/* line 33, ../sass/custom.scss */
-header p {
+/* line 42, ../sass/custom.scss */
+header.rp p {
   color: #f1f2f7;
 }
 
-/* line 38, ../sass/custom.scss */
+/* line 47, ../sass/custom.scss */
+footer {
+  width: 100%;
+  height: 60px;
+  margin-top: 50px;
+  background-color: #654bac;
+  border-bottom: 4px solid #4b3a79;
+}
+/* line 54, ../sass/custom.scss */
+footer .text-center {
+  line-height: 60px;
+  text-align: center;
+  color: white;
+}
+
+/* line 62, ../sass/custom.scss */
 #content {
   padding: 50px 15px 50px 15px;
   font-size: 16px;
@@ -43,7 +65,7 @@ header p {
   line-height: 25px;
   color: #333;
 }
-/* line 48, ../sass/custom.scss */
+/* line 72, ../sass/custom.scss */
 #content h1 {
   font-size: 52px;
   line-height: 60px;
@@ -51,32 +73,181 @@ header p {
   font-weight: 400;
   font-style: normal;
 }
-/* line 56, ../sass/custom.scss */
+/* line 80, ../sass/custom.scss */
 #content h2 {
   font-size: 36px;
   line-height: 46px;
   margin: 50px 0px 5px 0px;
 }
-/* line 63, ../sass/custom.scss */
+/* line 87, ../sass/custom.scss */
 #content p {
   margin: 0px 0px 25px 0px;
   text-transform: inherit;
   font-size: 16px;
 }
-/* line 68, ../sass/custom.scss */
-#content p img {
-  max-width: 100%;
-}
-/* line 73, ../sass/custom.scss */
+/* line 93, ../sass/custom.scss */
 #content ul {
   margin: 10px 20px;
   padding: 10px 20px;
 }
-/* line 77, ../sass/custom.scss */
+/* line 97, ../sass/custom.scss */
 #content ul li {
   list-style: disc;
 }
-/* line 82, ../sass/custom.scss */
+/* line 102, ../sass/custom.scss */
 #content strong {
   margin-top: 30px;
 }
+/* line 106, ../sass/custom.scss */
+#content img {
+  max-width: 100%;
+  margin: 20px auto;
+  display: block;
+}
+
+/* line 113, ../sass/custom.scss */
+.posts {
+  margin: 40px auto;
+}
+/* line 116, ../sass/custom.scss */
+.posts .post {
+  /* background-color: lighten($primary-color, 50%); */
+  -webkit-box-shadow: 0 8px 10px -6px #ddd;
+  -moz-box-shadow: 0 8px 10px -6px #ddd;
+  box-shadow: 0 8px 10px -6px #ddd;
+  /* padding: 10px; */
+  height: 350px;
+  margin: 15px auto;
+  position: relative;
+}
+/* line 127, ../sass/custom.scss */
+.posts .post .thumbnail {
+  width: 100%;
+  height: 200px;
+  border: none;
+  border-radius: 0;
+  padding: 0;
+}
+/* line 134, ../sass/custom.scss */
+.posts .post .thumbnail .please {
+  background-color: #aaa;
+  width: 100%;
+  height: 100%;
+}
+/* line 141, ../sass/custom.scss */
+.posts .post .title {
+  color: #654bac;
+  font-weight: 600;
+  padding: 0 10px;
+}
+/* line 147, ../sass/custom.scss */
+.posts .post .time {
+  padding: 0 10px;
+}
+/* line 151, ../sass/custom.scss */
+.posts .post .domain {
+  color: #444444;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  right: 10px;
+  display: block;
+  padding-top: 10px;
+  color: #654bac;
+  /* border-top: 1px solid lighten($primary-color, 30%); */
+}
+
+/* footer */
+/* line 167, ../sass/custom.scss */
+.page-wrap {
+  min-height: 100%;
+  margin-bottom: -60px;
+}
+
+/* line 172, ../sass/custom.scss */
+.page-wrap:after {
+  content: "";
+  display: block;
+}
+
+/* line 177, ../sass/custom.scss */
+.page-wrap:after {
+  /* .push must be the same height as footer */
+  height: 60px;
+}
+
+/* line 183, ../sass/custom.scss */
+.panel {
+  margin: 30px auto;
+}
+/* line 186, ../sass/custom.scss */
+.panel h3 {
+  font-variant: small-caps;
+  margin-bottom: 0;
+}
+
+/* end of footer */
+/* modals */
+/* line 196, ../sass/custom.scss */
+.modal-dialog {
+  width: 400px;
+}
+/* line 199, ../sass/custom.scss */
+.modal-dialog .form-signin {
+  margin: auto;
+}
+/* line 203, ../sass/custom.scss */
+.modal-dialog .modal-header {
+  background-color: #654bac;
+}
+
+/* end of modals */
+/* generics */
+/* line 211, ../sass/custom.scss */
+.tcenter {
+  text-align: center;
+  margin: auto;
+}
+
+/* line 217, ../sass/custom.scss */
+ul li {
+  font-size: 1.2em;
+  line-height: 1.6em;
+  margin-left: 20px;
+  list-style: square;
+}
+
+/* line 225, ../sass/custom.scss */
+.btn {
+  /* icons inside buttos */
+  /* primary color btn */
+}
+/* line 228, ../sass/custom.scss */
+.btn i.fa {
+  margin: auto 7px auto auto;
+}
+/* line 235, ../sass/custom.scss */
+.btn.btn-special {
+  background-color: #654bac;
+  color: #eaeaea;
+  border: 1px solid #eaeaea;
+  transition: all ease 0.3s;
+  outline: 0;
+}
+/* line 242, ../sass/custom.scss */
+.btn.btn-special.btn-modal {
+  width: 100%;
+  margin: 10px auto;
+}
+/* line 248, ../sass/custom.scss */
+.btn.btn-special:hover {
+  background-color: white;
+  border: 1px solid #654bac;
+  color: #444444;
+}
+/* line 254, ../sass/custom.scss */
+.btn.btn-special:active {
+  border: 1px solid #654bac;
+}
+
+/* end of generics */
