--- a/templates/parsed.html
+++ b/templates/parsed.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 
- <header>
+ <header class="rp">
    <div class="container">
      <div class="header-inner">
 
@@ -21,11 +21,17 @@
    <div class="col-xs-12 col-md-10 col-lg-7">
 
      <div id="content">
+       {% if user %}
+       <a id="readlater" href="javascript:void(0)"
+          class="btn btn-special">
+         <i class="fa fa-save"></i> <span>Read Later</span>
+       </a>
+       {% else %}
        <a href="#loginModal" data-toggle="modal"
           class="btn btn-special">
          <i class="fa fa-save"></i> Read Later
        </a>
-
+       {% endif %}
        <a class="btn btn-special" type="submit">
          <i class="fa fa-tag"></i> Menage Tags
        </a>
@@ -47,5 +53,68 @@
 
 {% block jsblock %}
   {{ super() }}
+ <script type="text/javascript">
+
+   // readlater button clicked
+   $('#readlater').on('click', function () {
+       console.log("{{data.url}}");
+
+       setTimeout(function () {
+           var target_url = "{{data.url}}";
+           var scrape_url = "/post/scrape";
+           var save_url = "/post/save"
+
+           var data = {
+               url: target_url,
+           }
+
+           $.ajax({
+               type: "POST",
+               url : scrape_url,
+               data: JSON.stringify(data, null, '\t'),
+               contentType: 'application/json;charset=UTF-8',
+               success: function(result) {
+                   var res = JSON.parse(result);
+
+                   $.ajax({
+                       type: "POST",
+                       url: save_url,
+                       data: JSON.stringify(res, null, '\t'),
+                       contentType: 'application/json;charset=UTF-8',
+                       success: function(data){
+                           console.log(data);
+                       }
+                   });
+               },
+               error: function(result) {
+                   var res = {
+                       thumbnail: "/static/img/nofoto.jpg",
+                       url: target_url,
+                       title: "no title"
+                   }
+                   console.log(res);
+               },
+               beforeSend: function() {
+                   $("#readlater i").removeClass("fa-save");
+                   $("#readlater i").addClass("fa-spinner");
+                   $("#readlater i").addClass("fa-spin");
+                   $("#readlater span").text("Saving..");
+               },
+               complete: function(){
+                   $("#readlater i").removeClass("fa-spinner");
+                   $("#readlater i").removeClass("fa-spin");
+                   $("#readlater i").addClass("fa-star");
+                   $("#readlater span").text("Saved!");
+               },
+               timeout: 10000
+           });
+
+           // make a httprequest to server with url
+       }, 100);
+   });
+
+
+ </script>
+
 {% endblock %} <!-- end of jsblock -->
 {% endblock %} <!-- end of body block -->
