--- a/static/sass/custom.scss
+++ b/static/sass/custom.scss
@@ -47,7 +47,7 @@ header.rp {
 footer {
     width: 100%;
     height: 60px;
-    margin-top: 50px;
+    /* margin-top: 50px; */
     background-color: $primary-color;
     border-bottom: 4px solid $primary-color-alt;
 
@@ -58,9 +58,58 @@ footer {
     }
 }
 
+#navigation {
+    /* padding: 30px 0; */
+    /* background-color: $light-white; */
+    border-bottom: 1px solid $light-white;
+
+    .navigationWrapper {
+
+        .navbutton {
+            display: table;
+            float: left;
+            background-color: #fff;
+            border-bottom: 3px solid #fff;
+            font-variant: small-caps;
+            font-weight: 500;
+            color: $soft-black;
+            padding: 18px 15px 15px 15px;
+            transition: all .3s ease;
+
+            i {
+                display: table-cell;
+                vertical-align: middle;
+                font-size: 1.5em;
+                padding: 5px;
+            }
+
+            span {
+                display: table-cell;
+                vertical-align: middle;
+                margin-bottom: 2px;
+            }
+
+            &:hover {
+                background-color: $light-white;
+                border-bottom: 3px solid $primary-color-alt;
+                color: $black;
+            }
+        }
+
+        /* .btn { */
+        /*     &.btn-special { */
+        /*         background-color: $primary-color-alt; */
+
+        /*         &:hover { */
+        /*             background-color: $white; */
+        /*         } */
+        /*     } */
+        /* } */
+    }
+}
 
 #content {
-    padding: 50px 15px 50px 15px;
+    padding: 0 15px;
     font-size: 16px;
     min-height: 100%;
     /* font-family: Georgia; */
@@ -111,7 +160,8 @@ footer {
 }
 
 .posts {
-    margin: 40px auto;
+    float: left;
+    margin: 20px auto;
 
     .post {
         /* background-color: lighten($primary-color, 50%); */
@@ -139,9 +189,16 @@ footer {
         }
 
         .title {
-            color: $primary-color;
-            font-weight: 600;
             padding: 0 10px;
+            font-weight: 600;
+            a {
+                color: $black;
+                transition: all 0.3s ease;
+
+                &:hover {
+                    color: $primary-color;
+                }
+            }
         }
 
         .time {
@@ -156,7 +213,6 @@ footer {
             right: 10px;
             display: block;
             padding-top: 10px;
-            color: $primary-color;
             /* border-top: 1px solid lighten($primary-color, 30%); */
         }
     }
