--- a/templates/parsed.html
+++ b/templates/parsed.html
@@ -17,6 +17,16 @@
      </div> <!-- end of header-inner -->
    </div>
  </header>
+
+ <div id="navigation">
+   <div class="container">
+     <div class="col-xs-12">
+       {% include "snippets/navigation.html" %}
+     </div>
+   </div>
+ </div>
+
+
  <div class="container">
    <div class="col-xs-12 col-md-10 col-lg-7">
 
