--- a/templates/parsed.html
+++ b/templates/parsed.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block body %}
+<div class="page-wrap">
 
  <header class="rp">
    <div class="container">
@@ -55,6 +56,7 @@
      </div>
    </div>
  </div>
+</div>
 
 {% block footer %}
   {{ super() }}
