--- a/templates/single.html
+++ b/templates/single.html
@@ -7,7 +7,7 @@
 {% block body %}
 
 
-
+<div class="page-wrap">
  <header class="rp">
    <div class="container">
      <div class="header-inner">
@@ -38,6 +38,7 @@
      </div>
    </div>
  </div>
+</div>
 
 {% block footer %}
   {{ super() }}
