the bug that appears on new document saving while unregistered solved

--- a/templates/base.html
+++ b/templates/base.html
@@ -140,7 +140,7 @@
 
           <form role="form" action="/parsed" method="POST" class="form-signin">
             <div class="login-wrap">
-              <input id="urlInput" name="url" type="text" autofocus=""
+              <input id="urlInputModal" name="url" type="text" autofocus=""
                      placeholder="Paste Url Here" class="form-control">
               <div class="tcenter">
                 <button class="btn btn-special btn-modal" type="submit">
