--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
        </div>
 
        <div class="panel-body">
-         <form role="form" action="/parsed" method="POST">
+         <form role="form" action="/submit" method="GET">
            <div class="form-group">
              <label for="urlInput">Paste URL Below</label>
              <input type="text" name="url" placeholder="Paste URL here"
