--- a/static/sass/custom.scss
+++ b/static/sass/custom.scss
@@ -162,6 +162,7 @@ footer {
 .posts {
     float: left;
     margin: 20px auto;
+    width: 100%;
 
     .post {
         /* background-color: lighten($primary-color, 50%); */
