--- a/templates/base.html
+++ b/templates/base.html
@@ -138,7 +138,7 @@
         <div class="modal-body">
           <!-- login form starts here -->
 
-          <form role="form" action="/parsed" method="POST" class="form-signin">
+          <form role="form" action="/submit" method="GET" class="form-signin">
             <div class="login-wrap">
               <input id="urlInputModal" name="url" type="text" autofocus=""
                      placeholder="Paste Url Here" class="form-control">
