--- a/templates/snippets/posts.html
+++ b/templates/snippets/posts.html
@@ -12,13 +12,16 @@
     {% endif %}
 
     <div class="title">
+      {% if post.post_type == "pdf" %}
+      <a href="{{post.url}}">{{post.title | truncate(70)}}</a>
+      {% else %}
       <a href="/{{post.seq}}/{{post.slug}}">{{post.title | truncate(70)}}</a>
+      {% endif %}
     </div>
 
     <div class="time">
       saved <time class="timeago" datetime="{{post.saved_date}}"></time>
     </div>
-
 
     <div class="domain">
       ({{post.domain}})
